added search for cities
